--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pulsemate</title>
+    <title>PulseMate</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
 
@@ -10,6 +10,25 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+
+      <!-- The justified navigation menu is meant for single line per list item.
+           Multiple lines will require custom code not provided by Bootstrap. -->
+      <div class="masthead">
+        <h3 class="text-muted">PulseMate</h3>
+        <nav>
+          <ul class="nav nav-justified">
+            <li class="<%= active_page?('overview') ? 'active' : '' %>"><%= link_to('Overview', employee_card_overview_path) %></li>
+            <li class="<%= active_page?('musco') ? 'active' : '' %>"><%= link_to('Musculoskeletal', employee_card_musco_path) %></li>
+            <li class="<%= active_page?('fatigue') ? 'active' : '' %>"><%= link_to('Fatigue', employee_card_fatigue_path) %></li>
+            <li class="<%= active_page?('hydration') ? 'active' : '' %>"><%= link_to('Hydration', employee_card_hydration_path) %></li>
+            <li class="<%= active_page?('mental') ? 'active' : '' %>"><%= link_to('Mental Health', employee_card_mental_path) %></li>
+            <li class="<%= active_page?('aod') ? 'active' : '' %>"><%= link_to('AOD', employee_card_aod_path) %></li>
+            <li class="<%= active_page?('login') ? 'active' : '' %>"><a href="#">Login</a></li>
+          </ul>
+        </nav>
+      </div>
+      <%= yield %>
+    </div>
   </body>
 </html>
