--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,13 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require font-awesome
  */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "employee_card";
 
 
 body {
@@ -105,4 +106,8 @@ body {
     padding-right: 0;
     padding-left: 0;
   }
+}
+
+.pane {
+  margin-top: 20px;
 }
