--- a/app/assets/stylesheets/employee_card.scss
+++ b/app/assets/stylesheets/employee_card.scss
@@ -27,3 +27,12 @@
   @extend .col-md-3;
   text-align: center;
 }
+
+.smiley-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.smiley {
+
+}
