Alert on questionnaire

--- a/app/views/employee_card/mental.haml
+++ b/app/views/employee_card/mental.haml
@@ -1,3 +1,7 @@
+.alert.alert-danger{:role => "alert"}
+  %span.glyphicon.glyphicon-exclamation-sign{"aria-hidden" => "true"}
+  %span Your vital statistics suggest something might be different for you recently. Please fill in the questionnaire below
+
 %form.jumbotron
   .container
     %h2
