--- a/app/assets/stylesheets/employee_card.scss
+++ b/app/assets/stylesheets/employee_card.scss
@@ -49,3 +49,8 @@ label {
 .answer-container {
   text-align: left;
 }
+
+.tell-someone-container {
+  display: flex;
+  justify-content: space-around;
+}
