--- a/app/views/employee_card/mental.haml
+++ b/app/views/employee_card/mental.haml
@@ -50,7 +50,7 @@
         %label.left-label{id: "confused"}
     .info-row
       %button.btn.btn-success{type: 'submit'}
-        That's just how I feel baby!
+        Sweet emotion!
 
 :javascript
   function updateSliderValue(id, value)
@@ -80,4 +80,4 @@
                 %input{name: "#{i}", value: subidx, type: 'radio', checked: selected == subidx ? 'checked' : nil}
     .info-row
       %button.btn.btn-success{type: 'submit'}
-        That's my questionnaire for today!
+        Tell me how I feel baby!
