--- a/app/views/employee_card/_wellness_results.haml
+++ b/app/views/employee_card/_wellness_results.haml
@@ -1,3 +1,4 @@
+
 %h2 Results<br />
 
 %ul
@@ -17,7 +18,7 @@
           Do you want to discuss this with somebody?
       %br
       .tell-someone-container
-        %button.btn.btn-primary Yes
+        %button.btn.btn-primary{ data: { toggle: "modal", target: "#contact-modal" } } Yes
         %button.btn.btn-warning{disabled: @metrics.any?(&:extreme?)} No
     .col-md-2
 
