--- a/app/views/employee_card/musco.haml
+++ b/app/views/employee_card/musco.haml
@@ -1,36 +1,45 @@
+.title-row
+  .cell
+    Assessment
+  .cell
+    Result
+  .cell
+    Action
+  .cell
+    Join Program
 .info-row
   .cell
     Number of steps
   .cell
-    tick
+    <i class="fa fa-2x fa-check"></i>
   .cell
-    action
+    10,023 steps
   .cell
-    join program
+
 .info-row
   .cell
     Heart Rate
   .cell
-    tick
+    <i class="fa fa-2x fa-times"></i>
   .cell
-    action
+    89 BPM
   .cell
-    join program
+    %button.btn.btn-primary Join
 .info-row
   .cell
     Minutes Active
   .cell
-    tick
+    <i class="fa fa-2x fa-times"></i>
   .cell
-    action
+    Try taking a 10 minute walk after dinner.
   .cell
-    join program
+    %button.btn.btn-primary Join
 .info-row
   .cell
     Heart Rate Variability
   .cell
-    tick
+    <i class="fa fa-2x fa-times"></i>
   .cell
-    action
+    Consider improving your cardiovascular fitness with an exercise program
   .cell
-    join program
+    %button.btn.btn-primary Join
