--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           </ul>
         </nav>
       </div>
-      <div class="pane col-md-10 col-md-offset-1">
+      <div class="pane ">
         <%= yield %>
       </div>
     </div>
