--- a/app/views/employee_card/fatigue.haml
+++ b/app/views/employee_card/fatigue.haml
@@ -1,32 +1,38 @@
+.jumbotron
+  .container
+    %h2 Notes for today
+    %p Stop high risk activities by <b>21:30</b>.
+    %p Time to bed: <b>22:30</b>.
+
+.title-row
+  .cell
+    Fatigue Impairment Type
+  .cell
+    Result
+  .cell
+    Action
+  .cell
+    Inform Manager
 .info-row
   .cell
     Single Night
   .cell
-    tick
+    <i class="fa fa-2x fa-exclamation-triangle"></i> 5 hours 32 mins
   .cell
-
+    Get at least six and a half hours sleep tonight.
   .cell
-
+    %button.btn.btn-warning Inform Manager
 .info-row
   .cell
     Multi-night
   .cell
-    flag
+    <i class="fa fa-2x fa-check"></i>
   .cell
-    who to tell
   .cell
-    risk management plan
 .info-row
   .cell
     Sleep Quality
   .cell
-    flag
+    <i class="fa fa-2x fa-check"></i>
   .cell
-    who to tell
   .cell
-    risk management plan
-
-.jumbotron
-  .container
-    .h2 Stop high risk activities by 21:30.
-    .h2 Time to bed: 22:30.
