--- a/app/views/employee_card/overview.haml
+++ b/app/views/employee_card/overview.haml
@@ -1,3 +1,10 @@
+.jumbotron
+  .container
+    %h2 Notes for today
+    %p Stop high risk activities by <b>21:30</b>.
+    %p Based on your location and your exercise level you're at <b>moderate risk of dehydration</b>.
+    %p Your last AOD test failed photomatch - <b>you can't start work until re-testing has passed.</b>
+
 .title-row
   .cell
   .cell
@@ -10,16 +17,20 @@
   .cell
     Fitness
   .cell
-    smiley
+    <i class="fa fa-2x fa-smile-o"></i>
   .cell
-    Multi-night
+
   .cell
-    Sleep Quality
+
 .info-row
   .cell
     Fatigue
   .cell
-    Hello!
+    <i class="fa fa-2x fa-exclamation-triangle"></i>
+  .cell
+    Multi-night
+  .cell
+    Sleep Quality
 .info-row
   .cell
     Hydration
