--- a/app/views/employee_card/musco.haml
+++ b/app/views/employee_card/musco.haml
@@ -20,16 +20,16 @@
   .cell
     Heart Rate
   .cell
-    <i class="fa fa-2x fa-times"></i>
+    <i class="fa fa-2x fa-exclamation-triangle"></i> 89 BPM
   .cell
-    89 BPM
+    Consider a cardiovascular fitness program
   .cell
     %button.btn.btn-primary Join
 .info-row
   .cell
     Minutes Active
   .cell
-    <i class="fa fa-2x fa-times"></i>
+    <i class="fa fa-2x fa-exclamation-triangle"></i> 22 mins
   .cell
     Try taking a 10 minute walk after dinner.
   .cell
@@ -38,8 +38,8 @@
   .cell
     Heart Rate Variability
   .cell
-    <i class="fa fa-2x fa-times"></i>
+    <i class="fa fa-2x fa-exclamation-triangle"></i>
   .cell
-    Consider improving your cardiovascular fitness with an exercise program
+    Consider a cardiovascular fitness program
   .cell
     %button.btn.btn-primary Join
