--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <li class="<%= active_page?('hydration') ? 'active' : '' %>"><%= link_to('Hydration', employee_card_hydration_path) %></li>
             <li class="<%= active_page?('mental') ? 'active' : '' %>"><%= link_to('Wellness <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"</span>'.html_safe, employee_card_mental_path) %></li>
             <li class="<%= active_page?('aod') ? 'active' : '' %>"><%= link_to('AOD', employee_card_aod_path) %></li>
-            <li class="<%= active_page?('login') ? 'active' : '' %>"><a href="#">Login</a></li>
+            <li class="<%= active_page?('login') ? 'active' : '' %>"><a href="#">Devices</a></li>
           </ul>
         </nav>
       </div>
