--- a/app/views/employee_card/aod.haml
+++ b/app/views/employee_card/aod.haml
@@ -1,3 +1,8 @@
+.jumbotron
+  .container
+    %h2 Notes for today
+    %p Your last AOD test failed photomatch - <b>you can't start work until re-testing has passed.</b>
+
 .aod-container
   %img.img-thumbnail.aod-avatar{src: image_path('avatar')}
   %ul.aod-details.aod-item
