--- a/app/views/employee_card/hydration.haml
+++ b/app/views/employee_card/hydration.haml
@@ -41,7 +41,7 @@
       "You are mildly dehydrated. Drink some water now.",
       "You are mildly dehydrated. Drink some water now.",
       "You are dehydrated. Your body isn't getting enough water. You need to drink water now.",
-      "You could have liver disease or sever dehydration. Re-hydrate immediately and see a doctor if this persists",
+      "You could have liver disease or severe dehydration. Re-hydrate immediately and see a doctor if this persists",
     ];
 
     var colour = $(object).data('colour');
