--- a/app/views/employee_card/overview.haml
+++ b/app/views/employee_card/overview.haml
@@ -4,6 +4,7 @@
     %p Stop high risk activities by <b>21:30</b>.
     %p Based on your location and your exercise level you're at <b>moderate risk of dehydration</b>.
     %p Your last AOD test failed photomatch - <b>you can't start work until re-testing has passed.</b>
+    %p Your vital statistics suggest something might be different for you recently. <b>Please fill in the questionnaire below</b>
 
 .title-row
   .cell
