--- a/app/views/employee_card/overview.haml
+++ b/app/views/employee_card/overview.haml
@@ -22,28 +22,39 @@
   .cell
 
   .cell
-
+    10/4/2016
 .info-row
   .cell
     Fatigue
   .cell
     <i class="fa fa-2x fa-exclamation-triangle"></i>
   .cell
-    Multi-night
+    Get at least six and a half hours of sleep tonight
   .cell
-    Sleep Quality
+    10/4/2016
 .info-row
   .cell
     Hydration
   .cell
-    Hello!
+    <i class="fa fa-2x fa-check"></i>
+  .cell
+  .cell
+    9/4/2016
 .info-row
   .cell
     Wellness
   .cell
-    Hello!
+    <i class="fa fa-2x fa-exclamation-triangle"></i>
+  .cell
+    Take self-assessment questionnaire
+  .cell
+    3/3/2016
 .info-row
   .cell
     AOD
   .cell
-    Hello!
+    <i class="fa fa-2x fa-exclamation-triangle"></i>
+  .cell
+    Your last AOD test failed photomatch - retake as soon as possible
+  .cell
+    8/4/2016
