--- a/app/views/layouts/employee_card.html.erb
+++ b/app/views/layouts/employee_card.html.erb
@@ -3,8 +3,8 @@
 
     <!-- The justified navigation menu is meant for single line per list item.
          Multiple lines will require custom code not provided by Bootstrap. -->
-    <div class="masthead">
-      <h3 class="text-muted">PulseMate</h3>
+    <div class="masthead" style="text-align: center;">
+      <h3 class="text-muted">PulseMate Dashboard - Bruce Jones</h3>
       <nav>
         <ul class="nav nav-justified">
           <li class="<%= active_page?('overview') ? 'active' : '' %>"><%= link_to('Overview', employee_card_overview_path) %></li>
