--- a/app/views/employee_card/aod.haml
+++ b/app/views/employee_card/aod.haml
@@ -4,7 +4,7 @@
     %p Your last AOD test failed photomatch - <b>you can't start work until re-testing has passed.</b>
 
 .aod-container
-  %img.img-thumbnail.aod-avatar{src: asset_path('avatar')}
+  %img.img-thumbnail.aod-avatar{src: asset_path('avatar.jpg')}
   %ul.aod-details.aod-item
     %h4 Test Details
     %table.table
