--- a/app/views/employee_card/hydration.haml
+++ b/app/views/employee_card/hydration.haml
@@ -8,7 +8,7 @@
     .col-md-3
       Your location
     .col-md-9
-      %img.img-circle{src: image_path('location'), width: '200px'}
+      %img.img-circle{src: asset_path('location.png'), width: '200px'}
   .info-row
     .col-md-3
       Weather for day
